# tag-based-deploy-test

./: .releaserc.json  README.md  e.toml  pyproject.toml
.github/workflows/: .ci.yaml.swp  .production_deploy.yaml.swp  .stage_deploy.yaml.swp  b2b_mvp.yaml  ci.yaml  production_deploy.yaml  stage_deploy.yaml
src/: main.py
