[tool.poetry]
name = "market-data-orchestrator"
version = "0.4.5"
description = ""
authors = [
    "x <x.x@loft.com.br>"
]
maintainers = ["LORE Market Data <x@loft.com.br>"]
repository = "https://github.com/loft-br/market-data-orchestrator"


[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
networkx = "^2.8.6"
requests = "^2.28.1"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^22.3.0"
flake8 = "==3.9.2"
mypy = "^0.961"
coverage = "^6.1.1"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slime = "market_data_orchestrator.main:app"
