[tool.poetry]
name = "teste"
version = "0.1.0"
description = "teste de bump"
authors = ["rafael"]

packages = [
{include = "src"}
]

[tool.poetry.scripts]
climl = "src.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
